# try-xinput-keybd-rust

./: .gitignore  Cargo.toml  README.md  gitignore  spec.md
.github/workflows/: ci.yml
src/: main.rs  win32_input.rs  xinput.rs
