[package]
name = "try-xinput-keybd-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[[bin]]
name = "xinput_keybd"
path = "src/main.rs"